--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id ="gradient">
-	<h1> Background Generator(test1) </h1>
+	<h1> Background Generator(Percobaan 2) </h1>
 	
 	<input oninput = "changeColor()" class = "color1" type="color" name="color1" value="#00ff00">
 
